--- a/package.json
+++ b/package.json
@@ -1,19 +1,85 @@
 {
-  "name": "agentball",
-  "version": "1.0.0",
-  "description": "For ETH",
-  "main": "index.js",
-  "scripts": {
-    "test": "cyy"
+  "name": "base-mcp",
+  "version": "1.0.11",
+  "description": "A Model Context Protocol (MCP) server that provides onchain tools for Claude AI, allowing it to interact with the Base blockchain and Coinbase API",
+  "bin": {
+    "base-mcp": "build/index.js"
   },
+  "type": "module",
+  "scripts": {
+    "run": "tsx src/index.ts",
+    "dev": "tsc --watch",
+    "build": "tsc && chmod +x ./build/index.js",
+    "lint": "eslint src",
+    "start": "node src/main.js",
+    "format": "prettier --write .",
+    "ci:format": "prettier --check .",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release:publish": "yarn build && changeset publish"
+  },
+  "files": [
+    "build"
+  ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Startrail1016/ETH-Beijing.git"
+    "url": "git+https://github.com/base/base-mcp.git"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Startrail1016/ETH-Beijing/issues"
+  "keywords": [
+    "mcp",
+    "claude",
+    "base",
+    "blockchain",
+    "coinbase",
+    "ethereum",
+    "web3",
+    "ai"
+  ],
+  "author": "Dan Schlabach, Tina He",
+  "license": "MIT",
+  "packageManager": "yarn@4.5.1",
+  "publishConfig": {
+    "access": "public"
   },
-  "homepage": "https://github.com/Startrail1016/ETH-Beijing#readme"
+  "dependencies": {
+    "@clack/prompts": "^0.10.1",
+    "@coinbase/agentkit": "^0.7.1",
+    "@coinbase/agentkit-model-context-protocol": "^0.2.0",
+    "@coinbase/coinbase-sdk": "^0.21.0",
+    "@coinbase/onchainkit": "^0.37.6",
+    "@ethereumjs/common": "^10.0.0",
+    "@inquirer/prompts": "^7.4.0",
+    "@modelcontextprotocol/sdk": "^1.6.1",
+    "@privy-io/public-api": "^2.20.5",
+    "chalk": "^5.4.1",
+    "dotenv": "^16.4.7",
+    "ethereumjs-wallet": "^1.0.2",
+    "graphql": "^16.10.0",
+    "graphql-request": "^7.1.2",
+    "reflect-metadata": "^0.2.2",
+    "viem": "^2.23.9",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.28.1",
+    "@eslint/js": "^9.22.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@types/express": "^4",
+    "@types/node": "^22.13.9",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "^2.31.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1",
+    "zod-to-json-schema": "^3.24.4"
+  }
 }
